<resources>
    <string name="app_name">Express Pizza</string>
    <string name="title_express">Express</string>
    <string name="title_pizza">Pizza</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_guest">Guest</string>
    <string name="btn_back">Back</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_date_default">YYYY MM DD</string>
    <string name="enter_date">Enter your date of birth:</string>
    <string name="custom_pizza">Create your custom pizza</string>
    <string name="choose_pizza">CHOOSE YOUR PIZZA:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="size_small">S</string>
    <string name="size_medium">M</string>
    <string name="size_large">L</string>
    <string name="select_size">Select the size:</string>
    <string name="cart">Your cart:</string>
    <string name="total_price">Total Price:</string>
    <string name="checkout">Checkout</string>
    <string name="choose_dough">Choose your dough:</string>
    <string name="choose_meat">Choose your meat:</string>
    <string name="choose_veggies">Choose your veggies:</string>
    <string name="choose_cheese">Choose your cheese:</string>
    <string name="choose_sauce">Choose your sauce:</string>
    <string name="dough_thin">Thin</string>
    <string name="dough_regular">Regular</string>
    <string name="dough_thick">Thick</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="ham">Ham</string>
    <string name="tomato">Tomato</string>
    <string name="cucumber">Cucumber</string>
    <string name="olives">Olives</string>
    <string name="bell_pepper">Bell Pepper</string>
    <string name="onion">Onion</string>
    <string name="spinach">Spinach</string>
    <string name="cheddar">Cheddar</string>
    <string name="monterey">Shredded Monterey</string>
    <string name="mozzarella">Mozzarela</string>
    <string name="orders">Your Orders:</string>
    <string name="order_received">Received</string>
    <string name="add_address">Done</string>
    <string name="input_add_address">Enter the delivery address</string>
    <string name="btn_orders">Orders</string>
    <string name="payment_terms">Payment is conducted on delivery</string>
    <string name="apply_points">Apply Points</string>
</resources>