<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomPizzaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="9dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/userNameOrders"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnCart"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_input"
            android:padding="3dp"
            app:srcCompat="@drawable/cart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:paddingLeft="35dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_dough"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbDoughRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:checked="true"
                    android:text="@string/dough_regular"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbDoughThick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/dough_thick"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbDoughThin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/dough_thin"
                    android:textColor="@color/dark_blue"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_meat"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbBeef"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:checked="true"
                    android:text="@string/beef"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbHam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/ham"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbChicken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/chicken"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="35dp"
        android:text="@string/choose_veggies"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbTomato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_blue"
                android:paddingRight="20dp"
                android:text="@string/tomato"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic" />

            <CheckBox
                android:id="@+id/cbCucumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_blue"
                android:paddingRight="20dp"
                android:text="@string/cucumber"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic" />

            <CheckBox
                android:id="@+id/cbSpinach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_blue"
                android:paddingRight="20dp"
                android:text="@string/spinach"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbPepper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_blue"
                android:paddingRight="20dp"
                android:text="@string/bell_pepper"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic" />

            <CheckBox
                android:id="@+id/cbOnion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/dark_blue"
                android:paddingRight="20dp"
                android:text="@string/onion"
                android:textColor="@color/dark_blue"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/choose_cheese"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp">

                <RadioButton
                    android:id="@+id/rbCheddar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:buttonTint="@color/dark_blue"
                    android:checked="true"
                    android:text="@string/cheddar"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbMonterey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/monterey"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />

                <RadioButton
                    android:id="@+id/rbMozarella"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:buttonTint="@color/dark_blue"
                    android:text="@string/mozzarella"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold|italic" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/total_price"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayTotalCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="$18.99"
                android:textColor="@color/dark_blue"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_green"
                android:text="@string/add_to_cart"
                app:cornerRadius="50dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>