<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/title_express"
                android:textColor="@color/orange"
                android:textSize="32sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="-10dp"
                android:text="@string/title_pizza"
                android:textColor="@color/red"
                android:textSize="46sp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:onClick="goToSignIn"
            android:text="@string/btn_sign_in"
            android:textSize="30sp"
            app:cornerRadius="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/yellow"
                android:onClick="goToSignUp"
                android:text="@string/btn_sign_up"
                android:textSize="20sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btnGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="goAsGuest"
                android:text="@string/btn_guest"
                android:textSize="20sp"
                app:cornerRadius="50dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>