<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/layout_pizza_container"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pizzaName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PEPPERONI"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/select_size"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSmallSize"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/size_small"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btnMediumSize"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:text="@string/size_medium"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btnLargeSize"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/light_grey"
                android:text="@string/size_large"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                app:cornerRadius="50dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/light_green"
            android:text="@string/add_to_cart"
            android:textSize="18sp"
            app:cornerRadius="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            app:srcCompat="@drawable/pizzamenu" />

        <TextView
            android:id="@+id/pizzaPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="$14.99"
            android:textColor="@color/dark_blue"
            android:textSize="26sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</LinearLayout>